회원 목록 대외비

--- a/okhq/WebContent/css/style.css
+++ b/okhq/WebContent/css/style.css
@@ -5,6 +5,10 @@ font-size: smaller;
 .number {
 text-align: right;
 }
+.warning {
+color: #f00;
+font-weight: bold;
+}
 table {
 border: 1px solid #ccc;
 margin: 0 auto;
